<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setMinTime"
            />
        <EditText
            android:id="@+id/editMinTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:editable="false"
            />
        </LinearLayout>
    <SeekBar
        android:id="@+id/seekBarMinTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="60"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setMaxTime"
            />
        <EditText
            android:id="@+id/editMaxTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:editable="false"
            />
    </LinearLayout>
    <SeekBar
        android:id="@+id/seekBarMaxTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="60"
        />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:id="@+id/checkBoxSwearNegative"
        android:text="@string/swear_negative"
        android:onClick="onCheckBoxPressed"
        />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxSwearNeutral"
        android:text="@string/swear_neutral"
        android:onClick="onCheckBoxPressed"
        />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:id="@+id/checkBoxSwearPositive"
        android:text="@string/swear_positive"
        android:onClick="onCheckBoxPressed"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonStartService"
            android:id="@+id/buttonStartService"
            android:onClick="startService"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/stopService"
            android:id="@+id/buttonStopService"
            android:onClick="stopService"
            android:enabled="false"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/buttonSendMotivation"
            android:onClick="sendSwear"
            />
        </LinearLayout>
    
    </LinearLayout>